[package]
name = "crypto-cli-tools"
version = "1.4.7"
edition = "2021"
authors = ["soulmachine <soulmachine@gmail.com>"]
description = "A collection of CLI tools to process cryptocurrency data"
license = "Apache-2.0"
repository = "https://github.com/soulmachine/crypto-cli-tools"
keywords = ["cryptocurrency", "blockchain", "trading"]


[dependencies]
chrono = "0.4.23"
crypto-market-type = "1.1.5"
crypto-msg-parser = "2.8.11"
crypto-msg-type = "1.0.11"
crypto-pair = "2.3.9"
crypto-message = "1.1.16"
dashmap = "5.4.0"
delimited-protobuf = "0.1.1"
env_logger = "0.10.0"
flate2 = "1.0.25"
glob = "0.3.0"
num_cpus = "1.15.0"
log = "0.4.17"
once_cell = "1.16.0"
rand = "0.8.5"
regex = "1.7.0"
rlimit = "0.8.3"
serde_json = "1.0.91"
serde = { version = "1.0.151", features = ["derive"] }
sysinfo = "0.27.1"
threadpool = "1.8.1"
urlencoding = "2.1.2"
xz2 = "0.1.7"

[profile.release]
lto = true
strip = "debuginfo"
codegen-units = 1
opt-level="z"
