[package]
name = "crypto-cli-tools"
version = "1.4.35"
edition = "2021"
authors = ["soulmachine <soulmachine@gmail.com>"]
description = "A collection of CLI tools to process cryptocurrency data"
license = "Apache-2.0"
repository = "https://github.com/soulmachine/crypto-cli-tools"
keywords = ["cryptocurrency", "blockchain", "trading"]


[dependencies]
chrono = "0.4.24"
crypto-market-type = "1.1.5"
crypto-msg-parser = "2.8.32"
crypto-msg-type = "1.0.11"
crypto-pair = "2.3.15"
crypto-message = "1.1.17"
dashmap = "5.4.0"
delimited-protobuf = "0.1.1"
env_logger = "0.10.0"
flate2 = "1.0.26"
glob = "0.3.1"
num_cpus = "1.15.0"
log = "0.4.17"
once_cell = "1.17.1"
rand = "0.8.5"
regex = "1.8.1"
rlimit = "0.9.1"
serde_json = "1.0.96"
serde = { version = "1.0.162", features = ["derive"] }
sysinfo = "0.29.0"
threadpool = "1.8.1"
urlencoding = "2.1.2"
xz2 = "0.1.7"

[profile.release]
lto = true
strip = "debuginfo"
codegen-units = 1
opt-level="z"
